# Nightsweeper

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  nightsweeper.config.example.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
docs/brainstorms/: 2026-06-15-nightsweeper-requirements.md
docs/plans/: 2026-06-15-001-feat-nightsweeper-overnight-scheduler-plan.md
docs/research/: 2026-06-15-grounding.md
lib/: agents.mjs  config.mjs  dispatcher.mjs  hub.mjs  isolation.mjs  ledger.mjs  preflight.mjs  report.mjs  run.mjs  scheduler.mjs  setup.mjs  sources.mjs  tasks.mjs  validator.mjs
nightsweeper/: __init__.py  cli.py  config.py  dispatcher.py  env.py  isolation.py  ledger.py  models.py  preflight.py  registry.py  report.py  validator.py
nightsweeper/adapters/: __init__.py  backend.py  backlog.py
nightsweeper/backends/: __init__.py  aider.py  claude_headless.py  (+2 more)
spikes/: s1_claude_economics.py  s2_headroom.py  s3_local_passrate.py  s3_ollama_direct.py
test/: agents.test.mjs  config.test.mjs  dispatcher.test.mjs  ledger.test.mjs  preflight.test.mjs  report.test.mjs  sources.test.mjs  tasks.test.mjs  validator.test.mjs
tests/: conftest.py  test_aider_tasklist.py  test_apple_notes.py  test_claude_backend.py  test_config.py  test_dispatcher.py  test_end_to_end.py  test_gates.py  test_github_issues.py  test_isolation.py  test_lane_chooser.py  test_ledger.py  test_local_backend.py  test_models.py  test_registry.py  test_report.py  test_review_fixes.py  test_scheduling.py  test_todo_scan.py  test_v2.py  test_validator.py
(+12 files in other folders)
